--- a/global.css
+++ b/global.css
@@ -72,13 +72,26 @@ h6 {
   box-sizing: border-box;
 }
 
+@media screen and (min-width: 1600px) {
+  .container {
+    margin: 1rem auto;
+    max-width: 1580px;
+  }
+}
+
 h1 {
   font-size: 25px;
 }
 
 section {
-  display: flex;
+  /* display: flex; */
   height: calc(100% - 61.5px);
+}
+
+@media screen and (min-width: 650px) {
+  section {
+    display: flex;
+  }
 }
 
 section .separator {
@@ -87,49 +100,101 @@ section .separator {
 }
 
 .preview {
-  width: 50%;
-  padding: 1rem;
-  height: 100%;
+  padding: 0.5rem;
+  height: 40%;
+  overflow-x: auto;
+  margin: 0 10px;
 }
+
+@media screen and (min-width: 650px) {
+  .preview {
+    width: 65%;
+    padding: 1rem;
+    height: 100%;
+    margin: 0;
+  }
+}
+
 .preview > div {
-  background-color: #ece9e9;
+  width: 1000px;
   height: 100%;
+  background-color: #ece9e9;
   border-radius: 3px;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1em;
+  overflow: auto;
+}
+
+@media screen and (min-width: 650px) {
+  .preview > div {
+    width: 100%;
+    overflow-x: hidden;
+  }
 }
 
 .control-container {
-  width: 50%;
-  height: 100%;
-  padding: 10px 0;
+  height: 60%;
+  padding: 1rem 0;
 }
+
+@media screen and (min-width: 650px) {
+  .control-container {
+    width: 35%;
+    height: 100%;
+  }
+}
+
 .control-panel {
   height: 100%;
-  padding: 1rem;
+  padding: 0 1rem;
   overflow-y: auto;
 }
+
 .control-panel .control {
   display: flex;
-  gap: 15px;
-  /* justify-content: space-between; */
+  gap: 1.25rem;
   flex-wrap: wrap;
   align-items: center;
 }
+
+@media screen and (min-width: 650px) {
+  .control-panel .control {
+    gap: 1rem;
+  }
+}
+
+.control > h2 {
+  width: 100%;
+  font-weight: 600;
+  padding: 0 3px;
+  background-color: #ece9e9;
+  text-align: center;
+}
+
+.control > h2:not(:first-child) {
+  margin-top: 0.75rem;
+}
+
 .control > label {
-  width: 31%;
-  /* margin-top: 0.5rem; */
+  width: 100%;
+}
+
+@media screen and (min-width: 1280px) {
+  .control > label {
+    width: 31%;
+  }
 }
 .control > div {
-  width: 65%;
-  /* margin-top: 1rem; */
+  width: 100%;
 }
+
 .color-panel {
   margin-top: 0.5em;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 10px;
 }
 
@@ -158,19 +223,48 @@ input[type="numer"] {
 }
 
 input.shadow-color-select {
-  width: 63%;
+  width: 100%;
+}
+@media screen and (min-width: 1280px) {
+  input.shadow-color-select {
+    width: 65%;
+  }
+}
+
+.color-selector-wrapper {
+  position: relative;
+}
+
+.color-selector-wrapper button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1;
 }
 
 input[type="color"].color-select {
-  width: 80px;
-  height: 80px;
+  width: 70px;
+  height: 70px;
+}
+
+@media screen and (min-width: 1280px) {
+  input[type="color"].color-select {
+    width: 80px;
+    height: 80px;
+  }
+}
+
+button.delete-button {
+  padding: 2px;
+  cursor: pointer;
+  color: red;
 }
 
 select {
   padding: 5px;
 }
 
-button {
+button.button {
   background: transparent;
   width: 80px;
   height: 80px;
